body gap fix

--- a/app/_scss/_base.scss
+++ b/app/_scss/_base.scss
@@ -34,6 +34,7 @@ body {
     overflow-y: hidden;
     font-size: 0;
     user-select: none;
+    margin-top: 0;
 }
 
 .view {
